bayelvira/src/main/java/elvira/translator/bif2elv/Bif2ElvParse.java
/* Generated By:JavaCC: Do not edit this line. Bif2ElvParse.java */
package elvira.translator.bif2elv;

import java.util.Vector;
import java.util.Enumeration;
import java.util.Hashtable;
import elvira.Node;
import elvira.NodeList;
import elvira.FiniteStates;
import elvira.Continuous;
import elvira.Configuration;
import elvira.potential.*;
import elvira.Relation;
import elvira.Link;
import elvira.LinkList;
import elvira.Bnet;
import java.io.*;


public class Bif2ElvParse implements Bif2ElvParseConstants {
 public String Type;
 public String Name;
 public String Title;
 public String Comment;
 public String Author;
 public String WhoChanged;
 public String WhenChanged;
 public String version;
 public boolean locked;
 public Hashtable NodeDefaultProperties;
 public Hashtable RelationDefaultProperties;
 public Vector Consistency;
 public NodeList Nodes;
 public LinkList Links;
 public Vector Relations;
 public FiniteStates DefaultFinite;
 public Continuous DefaultContinuous;
 //MixedNode DefaultMixed;
 public Relation DefaultRelation;
 public Link DefaultLink;
 public int defaultnodetype;
 public boolean statesdecl;





  public static void main(String args[]) throws ParseException
   ,IOException {
   Bnet b;
   FileInputStream networkFile;
   FileWriter networkOutputFile;

   if (args.length<2)
     System.out.println("Too few arguments. Arguments are: BifFile ElviraFile");
   else {
     networkFile = new FileInputStream(args[0]);
     Bif2ElvParse parser = new Bif2ElvParse(networkFile);
     parser.initialize();

     parser.CompilationUnit();
     b=new Bnet();
     b.translate(parser);
     networkOutputFile= new FileWriter(args[1]);
     b.saveBnet(networkOutputFile);
     networkOutputFile.close();
   }
  }

  public void initialize() {
    String DefaultStates[]= {"absent","present"};

   Name =  new String("");
   Title =  new String("");
   Comment =  new String("");
   Author =  new String("");
   WhoChanged =  new String("");
   WhenChanged =  new String("");
   version =  new String("1.0");

   Consistency = new Vector();
    Nodes = new NodeList();
    Links = new LinkList();
    Relations = new Vector();
    DefaultFinite = new FiniteStates("Default",DefaultStates);
    DefaultContinuous = new Continuous();
    DefaultContinuous.setTitle("");
    DefaultContinuous.setComment("");
    DefaultRelation = new Relation();
    DefaultRelation.setKind(Relation.CONDITIONAL_PROB);
    DefaultFinite.setTitle("");
    DefaultFinite.setComment("");
    DefaultLink = new Link(true);

//    parser.DefaultContinuous = new ContinuousNode();
//    parser.DefaultMixed = new MixedNode();
     defaultnodetype=1;
 }

  final public void CompilationUnit() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_1(4)) {
        ;
      } else {
        break label_1;
      }
      ElementDeclaration();
      if (jj_2_2(4)) {
        jj_consume_token(35);
      } else {
        ;
      }
    }
    jj_consume_token(0);
  }

  final public void ElementDeclaration() throws ParseException {
    if (jj_2_3(4)) {
      NetworkDeclaration();
    } else if (jj_2_4(4)) {
      NodeDeclaration();
    } else if (jj_2_5(4)) {
      ProbabilityDeclaration();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void NetworkDeclaration() throws ParseException {
 Token T;
    jj_consume_token(NETWORK);
    if (jj_2_6(4)) {
      T = jj_consume_token(WORD);
    } else if (jj_2_7(4)) {
      T = jj_consume_token(STRING);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
 Name=(T.toString());
    jj_consume_token(36);
    NetworkContent();
    jj_consume_token(37);
  }

  final public void NetworkContent() throws ParseException {
    label_2:
    while (true) {
      if (jj_2_8(4)) {
        ;
      } else {
        break label_2;
      }
      NetworkProperty();
      jj_consume_token(35);
    }
  }

  final public void NetworkProperty() throws ParseException {
 Token T;
    jj_consume_token(PROPERTY);
    if (jj_2_16(4)) {
      jj_consume_token(DISPLAYSIZE);
      jj_consume_token(EQUAL);
      jj_consume_token(OPEN_PAREN);
      jj_consume_token(DECIMAL_LITERAL);
      jj_consume_token(COMMA);
      jj_consume_token(DECIMAL_LITERAL);
      jj_consume_token(CLOSE_PAREN);
    } else if (jj_2_17(4)) {
      jj_consume_token(WORD);
      jj_consume_token(EQUAL);
      if (jj_2_9(4)) {
        jj_consume_token(DECIMAL_LITERAL);
      } else if (jj_2_10(4)) {
        jj_consume_token(INTEGER);
      } else if (jj_2_11(4)) {
        jj_consume_token(FLOAT);
      } else if (jj_2_12(4)) {
        jj_consume_token(FLOATSCI);
      } else if (jj_2_13(4)) {
        jj_consume_token(STRING);
      } else if (jj_2_14(4)) {
        jj_consume_token(STRINGDECIMAL);
      } else if (jj_2_15(4)) {
        jj_consume_token(WORD);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_18(4)) {
      jj_consume_token(STRING);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void NodeDeclaration() throws ParseException {
 Token T;
    jj_consume_token(VARIABLE);
    if (jj_2_19(4)) {
      T = jj_consume_token(WORD);
    } else if (jj_2_20(4)) {
      T = jj_consume_token(STRING);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    FiniteBody(T);
  }

  final public void FiniteBody(Token T) throws ParseException {
FiniteStates N;
N= (FiniteStates) DefaultFinite.copy();
N.setName(T.image);
    jj_consume_token(36);
    NodeProperties(N);
    jj_consume_token(37);
                               Nodes.insertNode(N);
  }

  final public void NodeProperties(FiniteStates M) throws ParseException {
    label_3:
    while (true) {
      if (jj_2_21(4)) {
        ;
      } else {
        break label_3;
      }
      NodeProperty(M);
      jj_consume_token(35);
    }
  }

  final public void NodeProperty(FiniteStates N) throws ParseException {
 Token T;
 Double D;
 Vector V;
    if (jj_2_47(4)) {
      jj_consume_token(NODEKIND);
      jj_consume_token(WORD);
    } else if (jj_2_48(4)) {
      jj_consume_token(TYPE);
      jj_consume_token(DISCRETE);
                     V= new Vector();
      jj_consume_token(OPEN_COR);
      T = jj_consume_token(DECIMAL_LITERAL);
      jj_consume_token(CLOSE_COR);
      if (jj_2_22(4)) {
        jj_consume_token(EQUAL);
      } else {
        ;
      }
      jj_consume_token(36);
      ListWords(V);
                        N.setStates(V);
      jj_consume_token(37);
    } else if (jj_2_49(4)) {
      jj_consume_token(PARENTS);
      jj_consume_token(OPEN_PAREN);
      if (jj_2_23(4)) {
                   V= new Vector();
        ListWords(V);
        jj_consume_token(CLOSE_PAREN);
      } else if (jj_2_24(4)) {
        jj_consume_token(CLOSE_PAREN);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_50(4)) {
      jj_consume_token(TITLE);
      if (jj_2_25(4)) {
        T = jj_consume_token(STRING);
      } else if (jj_2_26(4)) {
        T = jj_consume_token(STRINGDECIMAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                             N.setTitle(T.image.substring(1,T.image.length()-1));
    } else if (jj_2_51(4)) {
      jj_consume_token(BELIEF);
      jj_consume_token(OPEN_PAREN);
               PotentialTable PT = new PotentialTable(N);
      ListFloats(PT,0);
      jj_consume_token(CLOSE_PAREN);
    } else if (jj_2_52(4)) {
      jj_consume_token(COMMENT);
      if (jj_2_27(4)) {
        T = jj_consume_token(STRING);
      } else if (jj_2_28(4)) {
        T = jj_consume_token(STRINGDECIMAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                              N.setComment(T.image.substring(1,T.image.length()-1));
    } else if (jj_2_53(4)) {
      jj_consume_token(PROPERTY);
      if (jj_2_43(4)) {
        jj_consume_token(LABEL);
        jj_consume_token(EQUAL);
        if (jj_2_29(4)) {
          T = jj_consume_token(STRING);
        } else if (jj_2_30(4)) {
          T = jj_consume_token(STRINGDECIMAL);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else if (jj_2_44(4)) {
        jj_consume_token(POSITION);
        jj_consume_token(EQUAL);
        jj_consume_token(OPEN_PAREN);
        if (jj_2_31(4)) {
          T = jj_consume_token(INTEGER);
        } else if (jj_2_32(4)) {
          T = jj_consume_token(DECIMAL_LITERAL);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
                     N.setPosX( Integer.valueOf(T.image).intValue() );
        jj_consume_token(COMMA);
        if (jj_2_33(4)) {
          T = jj_consume_token(INTEGER);
        } else if (jj_2_34(4)) {
          T = jj_consume_token(DECIMAL_LITERAL);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
                     N.setPosY( Integer.valueOf(T.image).intValue() );
        jj_consume_token(CLOSE_PAREN);
      } else if (jj_2_45(4)) {
        jj_consume_token(WORD);
        jj_consume_token(EQUAL);
        if (jj_2_35(4)) {
          jj_consume_token(OPEN_PAREN);
                                      Vector C=new Vector();
          ListWords(C);
          jj_consume_token(CLOSE_PAREN);
        } else if (jj_2_36(4)) {
          jj_consume_token(DECIMAL_LITERAL);
        } else if (jj_2_37(4)) {
          jj_consume_token(INTEGER);
        } else if (jj_2_38(4)) {
          jj_consume_token(FLOAT);
        } else if (jj_2_39(4)) {
          jj_consume_token(FLOATSCI);
        } else if (jj_2_40(4)) {
          jj_consume_token(STRING);
        } else if (jj_2_41(4)) {
          jj_consume_token(STRINGDECIMAL);
        } else if (jj_2_42(4)) {
          jj_consume_token(WORD);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else if (jj_2_46(4)) {
        T = jj_consume_token(STRING);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ProbabilityDeclaration() throws ParseException {
  Vector C;
 Relation R;
 Token T;
    jj_consume_token(PROBABILITY);
                 R = DefaultRelation.copy();
                 C = new Vector();
    jj_consume_token(OPEN_PAREN);
    if (jj_2_54(4)) {
      T = jj_consume_token(WORD);
    } else if (jj_2_55(4)) {
      T = jj_consume_token(DECIMAL_LITERAL);
    } else if (jj_2_56(4)) {
      T = jj_consume_token(STRING);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                 C.addElement(T.toString());
    if (jj_2_59(4)) {
      if (jj_2_57(4)) {
        jj_consume_token(BAR);
        ListWords(C);
      } else if (jj_2_58(4)) {
        ListWords(C);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
  int i;
  Link K=null;
  for(i=1;i<C.size();i++) {
    K = new Link(true);
System.out.println("Enlace de "+ (String)(C.elementAt(i))+" a "+(String)(C.elementAt(0)));
    K.setTail (Nodes.getNode((String)(C.elementAt(i))));
    K.setHead (Nodes.getNode((String)(C.elementAt(0))));
    Links.insertLink(K);
  }
    jj_consume_token(CLOSE_PAREN);
                  R.setVariablesFromNames(C,Nodes);
    if (jj_2_60(4)) {
      jj_consume_token(35);
    } else if (jj_2_61(4)) {
      jj_consume_token(36);
      RelationProperties(R);
      jj_consume_token(37);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                 Relations.addElement(R);
  }

  final public void RelationProperties(Relation R) throws ParseException {
    if (jj_2_63(4)) {
      label_4:
      while (true) {
        RelationProperty(R);
        if (jj_2_62(4)) {
          ;
        } else {
          break label_4;
        }
      }
    } else if (jj_2_64(4)) {
      jj_consume_token(35);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void RelationProperty(Relation R) throws ParseException {
 Token T;
 Potential pot;
    if (jj_2_67(4)) {
      jj_consume_token(COMMENT);
      jj_consume_token(EQUAL);
      if (jj_2_65(4)) {
        T = jj_consume_token(STRING);
      } else if (jj_2_66(4)) {
        T = jj_consume_token(STRINGDECIMAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
          R.setComment(T.image.substring(1,T.image.length()-1));
    } else if (jj_2_68(4)) {
      pot = TableDeclaration(R);
          R.setValues(pot);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public PotentialTable TableDeclaration(Relation R) throws ParseException {
 PotentialTable T;
 int i;
   T = new PotentialTable(R.getVariables());
T.setValue(-1.0);
    if (jj_2_69(4)) {
      ListAssignments(T);
    } else if (jj_2_70(4)) {
      jj_consume_token(TABLE);
      ListFloats(T,0);
      jj_consume_token(35);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
   {if (true) return T;}
    throw new Error("Missing return statement in function");
  }

  final public void ListAssignments(PotentialTable T) throws ParseException {
Vector conf=new Vector(T.getVariables().size());
Integer I=new Integer(0);
conf.add(0,I);
    label_5:
    while (true) {
      Assignment(T,conf);
      jj_consume_token(35);
                             conf.setElementAt(I,0);
      if (jj_2_71(4)) {
        ;
      } else {
        break label_5;
      }
    }
  }

  final public void Assignment(PotentialTable Table,Vector conf) throws ParseException {
Vector V;
int i;
    jj_consume_token(OPEN_PAREN);
    V = ListWordIntegers(Table);
    jj_consume_token(CLOSE_PAREN);
  for(i=0;i<V.size();i++)
  {
    conf.add(i+1,V.get(i));
  }
    ListFloatsConf(Table,conf);
  }

  final public void ListFloats(PotentialTable Table,int i) throws ParseException {
 Token T;
// int i=0;
 Double D;
    if (jj_2_72(4)) {
      T = jj_consume_token(FLOAT);
    } else if (jj_2_73(4)) {
      T = jj_consume_token(FLOATSCI);
    } else if (jj_2_74(4)) {
      T = jj_consume_token(INTEGER);
    } else if (jj_2_75(4)) {
      T = jj_consume_token(DECIMAL_LITERAL);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  D= new Double(T.image);
  Table.setValue(i,D.doubleValue());
  i++;
    if (jj_2_78(4)) {
      if (jj_2_76(4)) {
        jj_consume_token(COMMA);
        ListFloats(Table,i);
      } else if (jj_2_77(4)) {
        ListFloats(Table,i);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
  }

  final public void ListFloatsConf(PotentialTable Table,Vector conf) throws ParseException {
 Token T;
 int i=0;
 Double D;
 Configuration C;
    if (jj_2_79(4)) {
      T = jj_consume_token(FLOAT);
    } else if (jj_2_80(4)) {
      T = jj_consume_token(FLOATSCI);
    } else if (jj_2_81(4)) {
      T = jj_consume_token(INTEGER);
    } else if (jj_2_82(4)) {
      T = jj_consume_token(DECIMAL_LITERAL);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  D= new Double(T.image);
  C = new Configuration(Table.getVariables(), conf);
  Table.setValue(C,D.doubleValue());
  i++;
    label_6:
    while (true) {
      if (jj_2_83(4)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(COMMA);
      if (jj_2_84(4)) {
        T = jj_consume_token(FLOAT);
      } else if (jj_2_85(4)) {
        T = jj_consume_token(FLOATSCI);
      } else if (jj_2_86(4)) {
        T = jj_consume_token(INTEGER);
      } else if (jj_2_87(4)) {
        T = jj_consume_token(DECIMAL_LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
  D= new Double(T.image);
  C.putValue((FiniteStates)(Table.getVariables().elementAt(0)),i);

  Table.setValue(C,D.doubleValue());
  i++;
    }
  }

  final public void ListWords(Vector C) throws ParseException {
 Token T;
    if (jj_2_88(4)) {
      T = jj_consume_token(WORD);
    } else if (jj_2_89(4)) {
      T = jj_consume_token(DECIMAL_LITERAL);
    } else if (jj_2_90(4)) {
      T = jj_consume_token(STRING);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
          C.addElement(T.toString());
    if (jj_2_93(4)) {
      if (jj_2_91(4)) {
        jj_consume_token(COMMA);
        ListWords(C);
      } else if (jj_2_92(4)) {
        ListWords(C);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
  }

  final public Vector ListWordIntegers(PotentialTable Table) throws ParseException {
Vector V;
 Token T;
 Integer I;
 int i;
 int j;
V = new Vector();
j=1;
    label_7:
    while (true) {
      if (jj_2_94(4)) {
        ;
      } else {
        break label_7;
      }
      if (jj_2_95(4)) {
        T = jj_consume_token(DECIMAL_LITERAL);
       i = (( FiniteStates) Table.getVariables().elementAt(j)).getId(T.image);
      I = new Integer(i);V.addElement(I);
      j++;
      } else if (jj_2_96(4)) {
        T = jj_consume_token(WORD);
      i = (( FiniteStates) Table.getVariables().elementAt(j)).getId(T.image);
      I = new Integer(i);V.addElement(I);
      j++;
      } else if (jj_2_97(4)) {
        T = jj_consume_token(STRINGDECIMAL);
       i = (( FiniteStates) Table.getVariables().elementAt(j)).getId(T.image.substring(1,T.image.length()-1));
       I = new Integer(i);V.addElement(I);
       j++;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_98(4)) {
        jj_consume_token(COMMA);
      } else {
        ;
      }
    }
  {if (true) return(V);}
    throw new Error("Missing return statement in function");
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  final private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  final private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  final private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }
